@@ -1,0 +1,3 @@
+#name: Wide instruction rejected in non-Thumb2 cores.
+#skip: *-*-*coff *-*-pe *-*-wince *-*-*aout* *-*-netbsd *-*-riscix*
+#error-output: thumb-w-bad.l
