@@ -1,0 +1,3 @@
+[^:]*: Assembler messages:
+[^:]*:4: Error: selected processor does not support `mov.w r1,r2'
+[^:]*:5: Error: selected processor does not support `mrs.w r0,apsr'
