@@ -1,0 +1,6 @@
+.syntax unified
+.arch armv4t
+.thumb
+mov.w r1, r2
+mrs.w r0, apsr
+
