@@ -1,0 +1,7 @@
+.thumb
+.syntax unified
+.arch armv4t
+bl.w foo
+.arch armv6-m
+mrs.w r0, apsr
+
