@@ -1,3 +1,11 @@
+2009-07-14  Daniel Gutson  <dgutson@codesourcery.com>
+
+	* gas/arm/thumb-w-bad.d: New test case.
+	* gas/arm/thumb-w-bad.l: New file.
+	* gas/arm/thumb-w-bad.s: New file.
+	* gas/arm/thumb-w-good.d: New test case.
+	* gas/arm/thumb-w-good.s: New file.
+
 2009-07-09  Daniel Gutson  <dgutson@codesourcery.com>
 
 	* gas/arm/inst-po.d: New testcase.
