@@ -1,3 +1,7 @@
+2009-07-14  Daniel Gutson  <dgutson@codesourcery.com>
+
+	* config/tc-arm.c (md_assemble): Added validation.
+
 2009-07-10  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* Makefile.am: Run "make dep-am".
